package com.example.courtierprobackend.documents.datalayer;

import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.data.jpa.repository.Query;
import org.springframework.data.repository.query.Param;
import org.springframework.stereotype.Repository;

import com.example.courtierprobackend.documents.datalayer.enums.DocumentStatusEnum;
import com.example.courtierprobackend.documents.datalayer.enums.StageEnum;

import java.util.List;
import java.util.Optional;
import java.util.UUID;
import java.time.LocalDateTime;

@Repository
public interface DocumentRepository extends JpaRepository<Document, Long> {

        Optional<Document> findByDocumentId(UUID documentId);

        List<Document> findByTransactionRef_TransactionId(UUID transactionId);

        List<Document> findByTransactionRef_TransactionIdAndStage(UUID transactionId, StageEnum stage);

        Optional<Document> findByTransactionRef_TransactionIdAndTemplateKey(UUID transactionId, String templateKey);

        List<Document> findByTransactionRef_TransactionIdAndAutoGeneratedTrueAndStatus(
                        UUID transactionId,
                        DocumentStatusEnum status);

        @Query("SELECT d FROM Document d WHERE d.transactionRef.clientId = :userId OR d.transactionRef.transactionId IN (SELECT t.transactionId FROM Transaction t WHERE t.brokerId = :userId)")
        List<Document> findByUserId(@Param("userId") UUID userId);

        @Query("SELECT d FROM Document d WHERE " +
                        "(d.transactionRef.clientId = :userId OR d.transactionRef.transactionId IN (SELECT t.transactionId FROM Transaction t WHERE t.brokerId = :userId)) AND "
                        +
                        "(LOWER(COALESCE(d.customTitle, '')) LIKE LOWER(CONCAT('%', :query, '%')) OR " +
                        "LOWER(CONCAT('', d.docType)) LIKE LOWER(CONCAT('%', :query, '%')) OR " +
                        "LOWER(COALESCE(d.brokerNotes, '')) LIKE LOWER(CONCAT('%', :query, '%')))")
        List<Document> searchDocuments(@Param("userId") UUID userId, @Param("query") String query);

        // Derived query method used for optimizations where explicit JOINs are
        // difficult
        List<Document> findByTransactionRefClientIdIn(java.util.List<UUID> clientIds);

        @Query("SELECT d FROM Document d WHERE " +
                        "(d.transactionRef.clientId IN :userIds OR d.transactionRef.transactionId IN (SELECT t.transactionId FROM Transaction t WHERE t.brokerId IN :userIds)) AND "
                        +
                        "(d.transactionRef.clientId = :requesterId OR d.transactionRef.transactionId IN (SELECT t.transactionId FROM Transaction t WHERE t.brokerId = :requesterId))")
        List<Document> findLinkedToUsers(@Param("userIds") java.util.List<UUID> userIds,
                        @Param("requesterId") UUID requesterId);

        // Admin queries - bypass @Where filter to see all records including
        // soft-deleted
        @Query(value = "SELECT * FROM documents ORDER BY last_updated_at DESC NULLS LAST", nativeQuery = true)
        List<Document> findAllIncludingDeleted();

        @Query(value = "SELECT * FROM documents WHERE deleted_at IS NOT NULL ORDER BY deleted_at DESC", nativeQuery = true)
        List<Document> findAllDeleted();

        @Query(value = "SELECT * FROM documents WHERE document_id = :documentId", nativeQuery = true)
        Optional<Document> findByDocumentIdIncludingDeleted(@Param("documentId") UUID documentId);

        @Query(value = "SELECT * FROM documents WHERE transaction_id = :transactionId", nativeQuery = true)
        List<Document> findByTransactionIdIncludingDeleted(@Param("transactionId") UUID transactionId);

        @Query("SELECT d FROM Document d " +
                        "JOIN Transaction t ON d.transactionRef.transactionId = t.transactionId " +
                        "WHERE t.brokerId = :brokerId " +
                        "AND (d.status = 'REQUESTED' OR d.status = 'NEEDS_REVISION') " +
                        "AND d.dueDate < :now " +
                        "ORDER BY d.dueDate ASC")
        List<Document> findOutstandingDocumentsForBroker(@Param("brokerId") UUID brokerId,
                        @Param("now") LocalDateTime now);
}
