@startuml DataLayer
skinparam classAttributeIconSize 0

title Data Layer

package "Data Layer" #LightYellow {
  interface DocumentRepository {
    + findByDocumentId(docId): Optional<Document>
    + findByTransactionRef_TransactionId(txId): List<Document>
    + findByTransactionRef_TransactionIdAndStage(txId, stage): List<Document>
    + findByTransactionRef_TransactionIdAndTemplateKey(txId, key): Optional<Document>
    + findByUserId(userId): List<Document>
    + searchDocuments(txId, query): List<Document>
    + findOutstandingDocumentsForBroker(brokerId, now): List<Document>
    + findByTransactionRefClientIdIn(clientIds): List<Document>
  }

  interface TransactionRepository {
    + findByTransactionId(txId): Optional<Transaction>
  }

  interface UserAccountRepository {
    + findById(userId): Optional<UserAccount>
    + findByAuth0UserId(auth0Id): Optional<UserAccount>
  }

  interface ChecklistStateRepository {
    + findByTransactionIdAndStage(txId, stage): List<TransactionStageChecklistState>
    + findByTransactionIdAndStageAndItemKey(txId, stage, key): Optional<TransactionStageChecklistState>
  }

  class Document <<Entity>> {
    - id: Long
    - documentId: UUID
    - transactionRef: TransactionRef
    - docType: DocumentTypeEnum
    - customTitle: String
    - status: DocumentStatusEnum
    - expectedFrom: DocumentPartyEnum
    - flow: DocumentFlowEnum
    - requiresSignature: boolean
    - stage: StageEnum
    - templateKey: String
    - autoGenerated: boolean
    - versions: List<DocumentVersion>
    - brokerNotes: String
    - visibleToClient: boolean
    - dueDate: LocalDateTime
    - createdAt: LocalDateTime
    - lastUpdatedAt: LocalDateTime
    - deletedAt: LocalDateTime
    - deletedBy: UUID
  }

  class DocumentVersion <<Entity>> {
    - id: Long
    - versionId: UUID
    - uploadedAt: LocalDateTime
    - uploadedBy: UploadedBy
    - storageObject: StorageObject
    - document: Document
    - deletedAt: LocalDateTime
    - deletedBy: UUID
  }

  class TransactionStageChecklistState <<Entity>> {
    - id: Long
    - transactionId: UUID
    - stage: StageEnum
    - itemKey: String
    - manualChecked: Boolean
    - manualCheckedBy: UUID
    - manualCheckedAt: LocalDateTime
    - autoChecked: boolean
    - autoCheckedAt: LocalDateTime
  }

  class TransactionRef <<Value Object>> {
    - transactionId: UUID
    - clientId: UUID
    - side: TransactionSide
  }

  class StorageObject <<Value Object>> {
    - s3Key: String
    - fileName: String
    - mimeType: String
    - sizeBytes: Long
  }

  class UploadedBy <<Value Object>> {
    - uploaderType: UploadedByRefEnum
    - party: DocumentPartyEnum
    - uploaderId: UUID
    - externalName: String
  }

  ' Intra-package relationships
  DocumentRepository ..> Document : persists
  ChecklistStateRepository ..> TransactionStageChecklistState : persists
  Document "1" *-- "1" TransactionRef : contains
  Document "1" *-- "0..*" DocumentVersion : contains
  DocumentVersion "1" *-- "1" StorageObject : contains
  DocumentVersion "1" *-- "1" UploadedBy : contains
}

@enduml
